<resources>
    <string name="app_name">Mystery Incorporated</string>
    <string name="fredButton">TODO</string>
    <string name="dapheButton">TODO</string>
    <string name="scoobybutton">TODO</string>
    <string name="velmaButton">TODO</string>
    <string name="shaggyButton">TODO</string>
    <string name="daphne_blake_a_fictional_character_from_the_scooby_doo_franchise_daphne_is_depicted_as_coming_from_a_wealthy_family_is_noted_for_her_orange_hair_lavender_heels_fashion_sense_and_her_knack_for_getting_into_danger_hence_the_nickname_danger_prone_daphne">Daphne Blake: a fictional character from the Scooby-Doo franchise. Daphne is depicted as coming from a wealthy family, is noted for her orange hair, lavender heels, fashion sense, and her knack for getting into danger, hence the nickname Danger Prone Daphne.</string>
    <string name="fred_jones_a_fictional_character_from_the_scooby_doo_franchise_he_usually_takes_the_lead_when_solving_mysteries_with_the_gang_he_is_also_the_one_that_is_often_shown_building_traps_for_the_villians_in_the_show_he_can_be_seen_wearing_a_white_shirt_blue_jeans_and_in_most_versions_a_orange_ascot_tie">Fred Jones: A fictional character from the Scooby-Doo franchise. he usually takes the lead when solving mysteries with the gang. He is also the one that is often shown building traps for the villians in the show. He can be seen wearing a white shirt, blue jeans, and in most versions a orange ascot tie.</string>
    <string name="scoobert_doo_the_main_character_in_and_protagonist_of_the_animated_series_scoob_doo_he_is_a_male_great_dane_and_life_long_best_friend_of_shaggy_rogers_with_whom_he_shares_many_personality_traits_he_has_brown_fur_with_black_spots_and_wears_a_blue_collar_that_his_parents_gave_to_him">Scoobert Doo: The main character in and protagonist of the animated series, Scoob-Doo. He is a male great dane, and life long best friend of Shaggy Rogers, with whom he shares many personality traits. He has brown fur with black spots and wears a blue collar that his parents gave to him.</string>
    <string name="shaggy_rogers_a_fictional_character_in_the_scooby_doo_franchise_he_is_known_as_the_cowardly_slacker_and_the_long_time_best_friend_of_scooby_doo_shaggy_is_part_of_a_group_that_goes_around_solving_mysteries_but_he_is_typically_more_interested_in_eating_than_solving_mysteries_he_can_usually_be_seen_wearing_a_green_v_neck_t_shirt_and_maroon_pants">Shaggy Rogers: A fictional character in the Scooby-Doo franchise. He is known as the cowardly slacker and the long-time best friend of Scooby-Doo. Shaggy is part of a group that goes around solving mysteries, but he is typically more interested in eating than solving mysteries. He can usually be seen wearing a green v-neck t-shirt and maroon pants.</string>
    <string name="velma_dinkley_a_fictional_character_in_the_scooby_doo_franchise_she_is_higly_intelligent_and_has_specific_interests_in_science_because_of_this_she_is_known_as_the_quot_brains_quot_of_the_group_a_running_gag_in_the_show_is_velma_s_severe_nearsightedness_and_having_trouble_keeping_her_glasses_on_her_face_so_you_can_often_times_see_her_losing_her_glasses_while_being_chased_by_a_villian_she_is_also_usually_seen_wearing_a_baggy_orange_turtleneck_a_pleated_red_skirt_knee_socks_red_shoes_and_of_course_her_glasses">Velma Dinkley: A fictional character in the Scooby-Doo franchise. She is higly intelligent and has specific interests in science, because of this she is known as the \"brains\" of the group. a running gag in the show is Velma\'s severe nearsightedness and having trouble keeping her glasses on her face, so you can often times see her losing her glasses while being chased by a villian. She is also usually seen wearing a baggy orange turtleneck, a pleated red skirt, knee socks, red shoes, and of course her glasses.</string>
</resources>