<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/fredButton"
        android:layout_width="216dp"
        android:layout_height="251dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/fredButton"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fred" />

    <ImageButton
        android:id="@+id/daphneButton"
        android:layout_width="205dp"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dapheButton"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        app:srcCompat="@drawable/daphne" />

    <ImageButton
        android:id="@+id/scoobyButton"
        android:layout_width="421dp"
        android:layout_height="172dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/scoobybutton"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/scooby" />

    <ImageButton
        android:id="@+id/velmaButton"
        android:layout_width="219dp"
        android:layout_height="222dp"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589"
        app:srcCompat="@drawable/velma"
        android:contentDescription="@string/velmaButton" />

    <ImageButton
        android:id="@+id/shaggyButton"
        android:layout_width="204dp"
        android:layout_height="225dp"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592"
        app:srcCompat="@drawable/shaggy"
        android:contentDescription="@string/shaggyButton" />

</androidx.constraintlayout.widget.ConstraintLayout>